# gemini-live-telemetry

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: event-sinks.md
src/gemini_live_telemetry/: __init__.py  __main__.py  _dashboard.py  _event_bus.py  _event_types.py  _instruments.py  _json_exporter.py  _receive_handler.py  _session_map.py  _wrappers.py  app_logger.py  compare.py  config.py  exceptions.py  instrumentation.py  models.py  otel.py  store.py
src/gemini_live_telemetry/sinks/: __init__.py  _protocol.py  _pubsub.py
src/gemini_live_telemetry/tests/: test_integration.py
